# telco-churn-mlops

./: .env  .gitignore  README.md  mlruns.db  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy.yml
artifacts/: model.pkl  preprocessing_metadata.joblib  preprocessing_metadata.json  preprocessing_pipeline.joblib  serving_config.json  training_summary.json  tuning_results.json
docker/: Dockerfile  nginx.conf
frontend/: index.html
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
mlruns/1/models/m-8d785ff32e9e496f8b49c565155f5cc1/artifacts/: MLmodel  conda.yaml  input_example.json  model.ubj  serving_input_example.json
mlruns/3/models/m-75732a3d5a364c95b4b021109df9eebe/artifacts/: MLmodel  model.ubj
models/m-c05a6ec86d7c4e9d8b9d23bb4d6de96e/artifacts/: MLmodel  model.ubj
notebooks/experiments/: baseline_model.ipynb  hyperparameter_tuning.ipynb
notebooks/experiments/.ipynb_checkpoints/: hyperparameter_tuning-checkpoint.ipynb
notebooks/exploration/: eda.ipynb
src/: __init__.py  config.py
src/data/: __init__.py  validation.py
src/features/: __init__.py  preprocessing.py
src/models/: __init__.py  evaluate.py  train.py
src/serving/: __init__.py  api.py  main.py
tests/: test_pipeline.py
