# =============================================================================
# Telco Churn MLOps - Project Configuration
# =============================================================================

[tool.poetry]
name = "telco-churn-mlops"
version = "1.0.0"
description = "End-to-end MLOps pipeline for Telco Churn prediction with Huawei Cloud deployment"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/telco-churn-mlops"
keywords = ["mlops", "churn", "xgboost", "fastapi", "huawei-cloud"]

[tool.poetry.dependencies]
python = "^3.10"

# Core Data Science
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

# Machine Learning
xgboost = "^3.2.0"
optuna = "^4.8.0"

# Experiment Tracking
mlflow = "^2.10.0"

# API & Serving
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gunicorn = "^21.0.0"

# Configuration & Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Utilities
joblib = "^1.3.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

# Data Validation (optional)
pandera = {version = "^0.18.0", optional = true}

# Jupyter (for notebooks)
jupyter = "^1.0.0"
ipykernel = "^6.0.0"

[tool.poetry.extras]
serve = ["pandera"]
dev = ["jupyter", "ipykernel"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"